# de_project

./: .gitignore  Dockerfile.crawlersetup  Dockerfile.mlapi  Dockerfile.prefect  Dockerfile.scrapyd  Makefile  README.md  dh_ingestion_recipe.yaml  docker-compose.yml  entrypoint_prefect.sh  pyproject.toml  requirements.txt  requirements_flow.txt  requirements_mlapi.txt  requirements_prefect.txt  requirements_prefectt.txt  requirements_spark.txt  setup_prefect.sh
de_project/: config.py
de_project/crawl/: scrapy.cfg
de_project/crawl/crawl/: items.py  olx_utils.py  otodom_utils.py  pipelines.py  settings.py
de_project/crawl/crawl/spiders/: olx_spider.py  otodom_spider.py
de_project/ml/: models.py
de_project/ml/app/: main.py
de_project/pipelines/: ml_pipeline.py  process_crawl_flow.py  transformations.py  utils.py
de_project/pipelines/app/: main.py
deployment/: entrypoint.sh
dhub/: docker-compose-without-neo4j-m1.quickstart.yml
