[tool.poetry]
name = "de-project"
version = "0.1.0"
description = ""
authors = ["Radoslaw Jurczak <radoslawjurczak95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.14.15"
pyspark = "^3.5.0"
polars = "^0.20.4"
deltalake = "^0.15.1"
jupyter = "^1.0.0"
delta-spark = "^3.0.0"
scikit-learn = "^1.4.0"
scrapy = "^2.11.0"
latest-user-agents = "^0.0.3"
ujson = "^5.9.0"
requests = "^2.31.0"
autopager = "^0.3.1"
pillow = "^10.2.0"
botocore = "^1.34.21"
boto3 = "^1.34.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
